--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 </header>
 
 <div class="hero">
-    <img src="TeriyakiHaleLogo 1.jpg" alt="Teriyaki Hale Logo">
+    <img src="TeriyakiHaleLogo 1.png" alt="Teriyaki Hale Logo">
     <h1>Island Flavor In Every Bite</h1>
 </div>
 
