--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
     <div class="sauce-highlight">
         🔥 Hale Hot Mayo | 🌴 Hale Teriyaki Sauce
     </div>
+    <div class="menu-card">
+    <h3>Teriyaki Beef Bowl</h3>
+    <p>Thinly sliced premium beef marinated in our house-made teriyaki sauce, served over steamed rice with seasonal vegetables.</p>
+    <span class="price">$14.00</span>
+</div>
 </section>
 
 <section id="events" style="background-color: #f2f2f2; width: 100%; max-width: 100%; box-sizing: border-box;">
