--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
            </div>
     <div class="menu-card">
     <h3>Teriyaki Beef Bowl</h3>
+    <div class="menu-card">
+    <h3>Teriyaki Beef Bowl</h3>
     <p>Thinly sliced premium beef marinated in our house-made teriyaki sauce, served over steamed rice with seasonal vegetables.</p>
-    <span class="price">$14.00</span>
 </div>
     </div>
 
