--- a/index.html
+++ b/index.html
@@ -162,9 +162,7 @@
             <p>Tender grilled chicken served over a bed of fluffy rice and steamed seasonal veggies.</p>
         </div>
            </div>
-    <div class="menu-card">
-    <h3>Teriyaki Beef Bowl</h3>
-    <div class="menu-card">
+       <div class="menu-item">
     <h3>Teriyaki Beef Bowl</h3>
     <p>Thinly sliced premium beef marinated in our house-made teriyaki sauce, served over steamed rice with seasonal vegetables.</p>
 </div>
