--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
     <h3>Teriyaki Beef Bowl</h3>
     <p>Thinly sliced premium beef marinated in our house-made teriyaki sauce, served over steamed rice with seasonal vegetables.</p>
 </div>
+        <div class="menu-item">
+    <h3>Hale Sunrise Bowl</h3>
+    <p>A hearty island breakfast: 2 fluffy scrambled eggs and 3 thick-cut, seared Spam slices over a bed of steamed rice. Topped with furikake and fresh green onions.</p>
+    <p class="modifier"><em>Upgrade to Loco Moco: Swap Spam for a 1/3 lb Angus Patty & Brown Gravy</em></p>
+</div>
     </div>
     <h3 style="margin-top:40px;">Signature Sauces</h3>
     <div class="sauce-highlight">
