--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
     <h2>Our Menu</h2>
     <div class="menu-grid">
         <div class="menu-item">
-            <h3>Island Hotdog</h3>
+            <h3>Hale Dog</h3>
             <p>All-beef hotdog topped with our signature fresh pineapple mango salsa.</p>
         </div>
         <div class="menu-item">
-            <h3>Teriyaki Burger</h3>
+            <h3>Hale Aloha Burger</h3>
             <p>Juicy burger glazed in teriyaki sauce, topped with a grilled slice of pineapple.</p>
         </div>
         <div class="menu-item">
-            <h3>Chicken Teriyaki Bowl</h3>
+            <h3>Hale Chicken Bowl</h3>
             <p>Tender grilled chicken served over a bed of fluffy rice and steamed seasonal veggies.</p>
         </div>
        <div class="menu-item">
-    <h3>Teriyaki Beef Bowl</h3>
+    <h3>Hale Beef Bowl</h3>
     <p>Thinly sliced premium beef marinated in our house-made teriyaki sauce, served over steamed rice with seasonal vegetables.</p>
 </div>
         <div class="menu-item">
