--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </div>
     <h3 style="margin-top:40px;">Signature Sauces</h3>
     <div class="sauce-highlight">
-        🔥 Hale Hot Mayo | 🌴 Hale Teriyaki Sauce
+        🔥 Hale Lava Mayo | 🌴 Hale Teri Sauce
  
 </section>
 
