--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@
     <div class="menu-grid">
         <div class="menu-item">
             <h3>Hale Dog</h3>
-            <p>All-beef hotdog topped with our signature fresh pineapple mango salsa.</p>
+            <p>All-beef hotdog topped with our signature fresh pineapple mango salsa, a grilled onions.</p>
         </div>
         <div class="menu-item">
             <h3>Hale Aloha Burger</h3>
-            <p>Juicy burger glazed in teriyaki sauce, topped with a grilled slice of pineapple.</p>
+            <p>Juicy burger glazed in teriyaki sauce, topped with a grilled slice of pineapple, and grilled onions.</p>
         </div>
         <div class="menu-item">
             <h3>Hale Chicken Bowl</h3>
-            <p>Tender grilled chicken served over a bed of fluffy rice and steamed seasonal veggies.</p>
+            <p>Tender grilled chicken served over a bed of fluffy rice and our gochu cucumber salad.</p>
         </div>
        <div class="menu-item">
     <h3>Hale Beef Bowl</h3>
-    <p>Thinly sliced premium beef marinated in our house-made teriyaki sauce, served over steamed rice with seasonal vegetables.</p>
+    <p>Thinly sliced premium beef marinated in our house-made teriyaki sauce, served over steamed rice with our gochu cucumber salad.</p>
 </div>
         <div class="menu-item">
     <h3>Hale Sunrise Bowl</h3>
