--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="menu-grid">
         <div class="menu-item">
             <h3>Hale Dog</h3>
-            <p>All-beef hotdog topped with our signature fresh pineapple mango salsa, a grilled onions.</p>
+            <p>All-beef hotdog topped with our signature fresh pineapple mango salsa, and optional grilled onions.</p>
         </div>
         <div class="menu-item">
             <h3>Hale Aloha Burger</h3>
