--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
         <div class="menu-item">
             <h3>Hale Aloha Burger</h3>
-            <p>Juicy burger glazed in teriyaki sauce, topped with a grilled slice of pineapple, and grilled onions.</p>
+            <p>1/3 lb Angus Patty - Juicy burger glazed in teriyaki sauce, topped with a grilled slice of pineapple, and grilled onions.</p>
         </div>
         <div class="menu-item">
             <h3>Hale Chicken Bowl</h3>
@@ -163,7 +163,7 @@
         </div>
        <div class="menu-item">
     <h3>Hale Beef Bowl</h3>
-    <p>Thinly sliced premium beef marinated in our house-made teriyaki sauce, served over steamed rice with our gochu cucumber salad.</p>
+    <p>1/3 lb Angus Patty marinated in our house-made teriyaki sauce, served over steamed rice with our gochu cucumber salad.</p>
 </div>
         <div class="menu-item">
     <h3>Hale Sunrise Bowl</h3>
