--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@
     <p>A hearty island breakfast: 2 fluffy scrambled eggs and 3 thick-cut, seared Spam slices over a bed of steamed rice. Topped with furikake and fresh green onions.</p>
     <p class="modifier"><em>Upgrade to Loco Moco: Swap Spam for a 1/3 lb Angus Patty & Brown Gravy</em></p>
 </div>
+        <div class="menu-item sides-drinks">
+    <h3>Hale Sides & Drinks</h3>
+    <div class="side-options">
+        <p><strong>Gochu Cucumber Salad</strong> — <em>Our signature spicy crunch</em></p>
+        <p><strong>Maui Style Chips</strong> — <em>Crispy island favorites</em></p>
+        <p><strong>Hawaiian Sun</strong> — <em>Assorted tropical flavors</em></p>
+    </div>
+    <p class="availability">*Availability may vary by location</p>
+</div>
     </div>
     <h3 style="margin-top:40px;">Signature Sauces</h3>
     <div class="sauce-highlight">
