--- a/index.html
+++ b/index.html
@@ -201,22 +201,52 @@
 </section>
 
 <section id="catering">
-    <h2>Catering Services</h2>
-    <p>Bring the "Hale" to your next party! We offer full catering for corporate events, birthdays, and weddings. From individual bowls to large party platters, we've got you covered.</p>
-</section>
+    <div class="catering-header">
+        <h2>Catering Services</h2>
+        <p class="intro-text">Aloha & welcome to our catering! Each meal is packed in eco-friendly trays, ready for your gathering. <strong>Orders require 48 hours notice.</strong></p>
+    </div>
 
-<section id="contact">
-    <h2>Contact Us</h2>
-    <p>Have questions or want to book us for an event?</p>
-    <form>
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea rows="5" placeholder="Tell us about your event or inquiry..."></textarea>
-        <button type="submit">Send Message</button>
-    </form>
-    <div style="margin-top: 20px; text-align: center;">
-        <p>📞 Phone: (801) 703-3233</p>
-        <p>📧 Email: aloha@teriyakihale.com</p>
+    <div class="catering-container">
+        <div class="catering-package">
+            <span class="badge">01</span>
+            <h3>The Hale Ohana Meal — $48</h3>
+            <p class="subtitle">Perfect for a family meal or small office lunch • Serves 3-4 people</p>
+            <ul class="meal-details">
+                <li><strong>24 oz Protein:</strong> Teriyaki Chicken or Thinly Sliced Beef</li>
+                <li><strong>Steamed White Rice</strong> (a generous portion)</li>
+                <li><strong>Choice of 1 Side:</strong> Gochu Cucumber, Asian Cabbage, or Classic Mac Salad</li>
+            </ul>
+        </div>
+
+        <div class="catering-package featured">
+            <span class="badge">02</span>
+            <h3>The Hale Luau Meal — $92</h3>
+            <p class="subtitle">Our most popular choice for parties & celebrations • Serves 8-10 people</p>
+            <ul class="meal-details">
+                <li><strong>48 oz Protein:</strong> Teriyaki Chicken or Thinly Sliced Beef</li>
+                <li><strong>Steamed White Rice</strong> (a large portion)</li>
+                <li><strong>Choice of 2 Sides:</strong> Gochu Cucumber, Asian Cabbage, or Classic Mac Salad</li>
+                <li><strong>BONUS:</strong> Includes 12 warm, soft dinner rolls & butter packets</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="alacarte-menu">
+        <h3>À La Carte & Large Orders</h3>
+        <div class="alacarte-grid">
+            <div class="alacarte-item">
+                <p><strong>Proteins:</strong> $16 per pound</p>
+                <small>Teriyaki Chicken or Thinly Sliced Beef</small>
+            </div>
+            <div class="alacarte-item">
+                <p><strong>Steamed Rice:</strong> $8 per quart</p>
+            </div>
+            <div class="alacarte-item">
+                <p><strong>Side Salads:</strong> $12 per half-tray</p>
+                <small>Serves 8-10 people</small>
+            </div>
+        </div>
+        <p class="custom-note"><em>*Ideal for events of 15+ people. Contact us for a custom quote.</em></p>
     </div>
 </section>
 
