--- a/index.html
+++ b/index.html
@@ -361,6 +361,11 @@
                 <small>Serves 8-10 people</small>
             </div>
         </div>
+        <div class="delivery-box">
+            <p>🚚 <strong>Delivery & Logistics</strong></p>
+            <p>Delivery fees are calculated based on distance from our commissary kitchen.</p>
+            <p><small>Free local pickup may be available upon request.</small></p>
+        </div>
         <p class="custom-note"><em>*Ideal for events of 15+ people. Contact us below for a custom quote.</em></p>
     </div>
 </section>
