--- a/index.html
+++ b/index.html
@@ -409,14 +409,13 @@
             background-color: #143a2f;
         }
     </style>
-
-    <h2>Contact Us</h2>
+<h2>Contact Us</h2>
     <p>Have questions or want to book us for an event?</p>
 
     <form action="https://formspree.io/f/xjgvganv" method="POST" class="contact-form">
-        
         <input type="hidden" name="_next" value="https://teriyakihale.com/thanks.html">
-        
+        <input type="hidden" name="_subject" value="New Catering Inquiry - Teriyaki Hale">
+
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <input type="text" name="address" placeholder="Event Delivery Address (for fee calculation)" required>
@@ -424,6 +423,7 @@
 
         <button type="submit">Send Message</button>
     </form>
+</section>
 
     <div style="margin-top: 30px;">
         <p>📞 Phone: (801) 703-3233</p>
@@ -431,7 +431,7 @@
     </div>
 </section>
 <footer>
-    <p>&copy; 2023 Teriyaki Hale. All Rights Reserved.</p>
+    <p>&copy; 2025 Teriyaki Hale. All Rights Reserved.</p>
 </footer>
 
 </body>
