--- a/index.html
+++ b/index.html
@@ -424,11 +424,10 @@
         <button type="submit">Send Message</button>
     </form>
 </section>
-
-    <div style="margin-top: 30px;">
-        <p>📞 Phone: (801) 703-3233</p>
-        <p>📧 Email: aloha@teriyakihale.com</p>
-    </div>
+<div style="margin-top: 30px; text-align: center; width: 100%;">
+    <p>📞 Phone: (801) 703-3233</p>
+    <p>📧 Email: aloha@teriyakihale.com</p>
+</div>
 </section>
 <footer>
     <p>&copy; 2025 Teriyaki Hale. All Rights Reserved.</p>
