--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
         <button type="submit">Send Message</button>
     </form>
 </section>
-<div style="margin-top: 30px; text-align: center; width: 100%;">
-    <p>📞 Phone: (801) 703-3233</p>
-    <p>📧 Email: aloha@teriyakihale.com</p>
+<div style="margin-top: 10px; text-align: center; width: 100%;">
+    <p style="margin: 5px 0;">📞 Phone: (801) 703-3233</p>
+    <p style="margin: 5px 0;">📧 Email: aloha@teriyakihale.com</p>
 </div>
 </section>
 <footer>
