--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <p class="custom-note"><em>*Ideal for events of 15+ people. Contact us below for a custom quote.</em></p>
     </div>
 </section>
-<section id="contact" style="background-color: #FFF9E6; padding: 60px 20px; text-align: center;">
+<section id="contact"style="background-color: #FFF9E6; padding: 60px 20px; margin-top: 5px;text-align: center;">
     <style>
         #contact h2 {
             color: #1B4D3E;
@@ -424,7 +424,7 @@
         <button type="submit">Send Message</button>
     </form>
 </section>
-<div style="margin-top: 10px; text-align: center; width: 100%;">
+<div style="margin-top: 5px; text-align: center; width: 100%;">
     <p style="margin: 5px 0;">📞 Phone: (801) 703-3233</p>
     <p style="margin: 5px 0;">📧 Email: aloha@teriyakihale.com</p>
 </div>
