--- a/index.html
+++ b/index.html
@@ -369,47 +369,42 @@
         <p class="custom-note"><em>*Ideal for events of 15+ people. Contact us below for a custom quote.</em></p>
     </div>
 </section>
-<section id="contact"style="background-color: #FFF9E6; padding: 60px 20px; margin-top: 5px;text-align: center;">
+<section id="contact" style="background-color: #f2f2f2; padding: 60px 20px; text-align: center; width: 100%; box-sizing: border-box;">
     <style>
-        #contact h2 {
-            color: #1B4D3E;
-            border-bottom: 3px solid #FFD200;
-            display: inline-block;
-            padding-bottom: 5px;
-            font-family: inherit;
+        #contact h2 { 
+            color: #1B4D3E; 
+            border-bottom: 3px solid #FFD200; 
+            display: inline-block; 
+            padding-bottom: 5px; 
         }
-        .contact-form {
-            max-width: 600px;
-            margin: 40px auto;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            text-align: left;
+        .contact-form { 
+            max-width: 600px; 
+            margin: 40px auto 20px auto; /* Bottom margin reduced to 20px */
+            display: flex; 
+            flex-direction: column; 
+            gap: 15px; 
+            text-align: left; 
         }
-        .contact-form input, .contact-form textarea {
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 1em;
-            width: 100%;
-            box-sizing: border-box;
+        .contact-form input, .contact-form textarea { 
+            padding: 12px; 
+            border: 1px solid #ccc; 
+            border-radius: 5px; 
+            width: 100%; 
+            box-sizing: border-box; 
+            background-color: #ffffff; /* keeps input fields white for readability */
         }
-        .contact-form button {
-            background-color: #1B4D3E;
-            color: white;
-            padding: 15px;
-            border: none;
-            border-radius: 5px;
-            font-weight: bold;
-            font-size: 1.1em;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        .contact-form button:hover {
-            background-color: #143a2f;
+        .contact-form button { 
+            background-color: #1B4D3E; 
+            color: white; 
+            padding: 15px; 
+            border: none; 
+            border-radius: 5px; 
+            font-weight: bold; 
+            cursor: pointer; 
         }
     </style>
-<h2>Contact Us</h2>
+
+    <h2>Contact Us</h2>
     <p>Have questions or want to book us for an event?</p>
 
     <form action="https://formspree.io/f/xjgvganv" method="POST" class="contact-form">
@@ -423,14 +418,15 @@
 
         <button type="submit">Send Message</button>
     </form>
+
+    <div style="margin-top: 10px; text-align: center; width: 100%;">
+        <p style="margin: 5px 0;">📞 Phone: (801) 703-3233</p>
+        <p style="margin: 5px 0;">📧 Email: aloha@teriyakihale.com</p>
+    </div>
 </section>
-<div style="margin-top: 5px; text-align: center; width: 100%;">
-    <p style="margin: 5px 0;">📞 Phone: (801) 703-3233</p>
-    <p style="margin: 5px 0;">📧 Email: aloha@teriyakihale.com</p>
-</div>
-</section>
-<footer>
-    <p>&copy; 2025 Teriyaki Hale. All Rights Reserved.</p>
+
+<footer style="background-color: #1B4D3E; color: white; padding: 20px; text-align: center;">
+    <p style="margin: 0;">&copy; 2025 Teriyaki Hale. All Rights Reserved.</p>
 </footer>
 
 </body>
