--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
         <p class="custom-note"><em>*Ideal for events of 15+ people. Contact us below for a custom quote.</em></p>
     </div>
 </section>
-<section id="contact" style="background-color: #f2f2f2; padding: 60px 20px; text-align: center; width: 100%; box-sizing: border-box;">
-    <style>
+<section id="contact" style="background-color: #f2f2f2; width: 100%; max-width: 100%; box-sizing: border-box;">
+    <div style="max-width: 900px; margin: auto;">
         #contact h2 { 
             color: #1B4D3E; 
             border-bottom: 3px solid #FFD200; 
