--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
 </section>
 <section id="contact" style="background-color: #f2f2f2; width: 100%; max-width: 100%; box-sizing: border-box;">
     <div style="max-width: 900px; margin: auto;">
+        <style>
         #contact h2 { 
             color: #1B4D3E; 
             border-bottom: 3px solid #FFD200; 
