--- a/index.html
+++ b/index.html
@@ -424,6 +424,20 @@
         <p style="margin: 5px 0;">📞 Phone: (801) 703-3233</p>
         <p style="margin: 5px 0;">📧 Email: aloha@teriyakihale.com</p>
     </div>
+<!-- ======= About Us Section ======= -->
+<section id="about" style="padding: 40px 20px; background: #f9f9f9;">
+  <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+    <h2>About Teriyaki Hale</h2>
+    <p><strong>Aloha Means Family</strong></p>
+    <p>Teriyaki Hale brings the bold, welcoming flavors of island-style cooking to the heart of Utah. We’re a local, family-run food booth built for festivals, fairs, and your next gathering.</p>
+    
+    <p>Our signature <strong>Hale Lava Sauce</strong>—a spicy, creamy blend of gochujang and sriracha—has become a festival favorite, topping our burgers, bowls, and more. We focus on fresh ingredients, bold flavors, and the kind of hospitality that makes every meal feel like a celebration.</p>
+    
+    <p>Find us at festivals across Salt Lake and Utah County, or <a href="#catering">book us for your next event</a>!</p>
+  </div>
+</section>
+
+</footer>        
 </section>
 
 <footer style="background-color: #1B4D3E; color: white; padding: 20px; text-align: center;">
