--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <p style="margin: 5px 0;">📧 Email: aloha@teriyakihale.com</p>
     </div>
 <!-- ======= About Us Section ======= -->
-<section id="about" style="padding: 40px 20px; background: #f9f9f9;">
+<section id="about" style="padding: 40px 20px; background: #FFF9E6;">
   <div style="max-width: 800px; margin: 0 auto; text-align: center;">
     <h2>About Teriyaki Hale</h2>
     <p><strong>Aloha Means Family</strong></p>
