--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         <a href="#events">Events</a>
         <a href="#catering">Catering</a>
         <a href="#contact">Contact</a>
+         <a href="#aboutteriyakihale">About Us</a>
     </nav>
 </header>
 
