--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <a href="#events">Events</a>
         <a href="#catering">Catering</a>
         <a href="#contact">Contact</a>
-         <a href="#About Teriyaki Hale">About Us</a>
+         <a href="#About Teriyaki Hale">About Teriyaki Hale</a>
     </nav>
 </header>
 
