--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         <p style="margin: 5px 0;">📧 Email: aloha@teriyakihale.com</p>
     </div>
 <!-- ======= About Us Section ======= -->
-<section id="about" style="padding: 40px 20px; background: #FFF9E6;max-width: 100%; box-sizing: border-box;">
+<section id="about" style="padding: 60px 0; background-color: #FFF9E6; width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
   <div style="max-width: 800px; margin: 0 auto; text-align: center;">
     <h2>About Teriyaki Hale</h2>
     <p><strong>Aloha Means Family</strong></p>
