--- a/index.html
+++ b/index.html
@@ -427,15 +427,13 @@
     </div>
 <!-- ======= About Us Section ======= -->
 <section id="about" style="padding: 60px 0; background-color: #FFF9E6; width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
-  <div style="max-width: 800px; margin: 0 auto; text-align: center;">
-    <h2>About Teriyaki Hale</h2>
-    <p><strong>Aloha Means Family</strong></p>
-    <p>Teriyaki Hale brings the bold, welcoming flavors of island-style cooking to the heart of Utah. We’re a local, family-run food booth built for festivals, fairs, and your next gathering.</p>
-    
-    <p>Our signature <strong>Hale Lava Sauce</strong>—a spicy, creamy blend of gochujang and sriracha—has become a festival favorite, topping our burgers, bowls, and more. We focus on fresh ingredients, bold flavors, and the kind of hospitality that makes every meal feel like a celebration.</p>
-    
-    <p>Find us at festivals across Salt Lake and Utah County, or <a href="#catering">book us for your next event</a>!</p>
-  </div>
+    <div style="max-width: 800px; margin: 0 auto; text-align: center; padding: 0 20px;">
+        <h2 style="color: #1B4D3E; border-bottom: 3px solid #FFCC00; display: inline-block; padding-bottom: 5px;">About Teriyaki Hale</h2>
+        <p><strong>Aloha Means Family</strong></p>
+        <p>Teriyaki Hale brings the bold, welcoming flavors of island-style cooking to the heart of Utah. We’re a local, family-run food booth built for festivals, fairs, and your next gathering.</p>
+        <p>Our signature <strong>Hale Lava Sauce</strong>—a spicy, creamy blend of gochujang and sriracha—has become a festival favorite, topping our burgers, bowls, and more.</p>
+        <p>Find us at festivals across Salt Lake and Utah County, or <a href="#contact" style="color: #1B4D3E; font-weight: bold; text-decoration: underline;">book us for your next event!</a></p>
+    </div>
 </section>
 
 </footer>        
