--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
         <p style="margin: 5px 0;">📧 Email: aloha@teriyakihale.com</p>
     </div>
 <!-- ======= About Us Section ======= -->
-<section id="about" style="padding: 60px 0; background-color: #FFF9E6; width: 100vw; position: relative; left: 50%; right: 50%; margin-left: -50vw; margin-right: -50vw;">
-    <div style="max-width: 800px; margin: 0 auto; text-align: center; padding: 0 20px;">
+<section id="contact" style="background-color: #FFF9E6; width: 100%; max-width: 100%; box-sizing: border-box;">
+    <div style="max-width: 900px; margin: auto;">
         <h2 style="color: #1B4D3E; border-bottom: 3px solid #FFCC00; display: inline-block; padding-bottom: 5px;">About Teriyaki Hale</h2>
         <p><strong>Aloha Means Family</strong></p>
         <p>Teriyaki Hale brings the bold, welcoming flavors of island-style cooking to the heart of Utah. We’re a local, family-run food booth built for festivals, fairs, and your next gathering.</p>
