--- a/index.html
+++ b/index.html
@@ -429,7 +429,8 @@
 <section id="contact" style="background-color: #FFF9E6; width: 100%; max-width: 100%; box-sizing: border-box;">
     <div style="max-width: 900px; margin: auto;">
         <h2 style="color: #1B4D3E; border-bottom: 3px solid #FFCC00; display: inline-block; padding-bottom: 5px;">About Teriyaki Hale</h2>
-        <p><strong>Aloha Means Family</strong></p>
+        <p><strong>Hale Means House or Home</strong></p>
+        <p><strong>Aloha Means Welcome to the Family</strong></p>
         <p>Teriyaki Hale brings the bold, welcoming flavors of island-style cooking to the heart of Utah. We’re a local, family-run food booth built for festivals, fairs, and your next gathering.</p>
         <p>Our signature <strong>Hale Lava Sauce</strong>—a spicy, creamy blend of gochujang and sriracha—has become a festival favorite, topping our burgers, bowls, and more.</p>
         <p>Find us at festivals across Salt Lake and Utah County, or <a href="#contact" style="color: #1B4D3E; font-weight: bold; text-decoration: underline;">book us for your next event!</a></p>
