--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         <p style="margin: 5px 0;">📧 Email: aloha@teriyakihale.com</p>
     </div>
 <!-- ======= About Us Section ======= -->
-<section id="contact" style="background-color: #FFF9E6; width: 100%; max-width: 100%; box-sizing: border-box;">
+<section id="about" style="background-color: #FFF9E6; width: 100%; max-width: 100%; box-sizing: border-box;">
     <div style="max-width: 900px; margin: auto;">
         <h2 style="color: #1B4D3E; border-bottom: 3px solid #FFCC00; display: inline-block; padding-bottom: 5px;">About Teriyaki Hale</h2>
         <p><strong>Hale Means House or Home</strong></p>
